2007-09-11  Andrey Slusar  <anrays@gmail.com>

	* src/gate/rfc2ftn.c (snd_mail): Revert missing
	change.

2007-04-07  Andrey Slusar  <anrays@gmail.com>

	* src/toss/ftntoss.c (do_unknown_area): Correct
	works `KillUnknown' option(thanks to Dmitry Rodin).

2007-01-30  Andrey Slusar  <anrays@gmail.com>

	======= Release 5.1.7ds ========================
	------- CVS tag R517 ---------------------------
	* configure.in: Update to 5.1.7ds
	* version.h (PATCHLEVEL): Ditto.
	* scripts/outbound/outb-kill.in: Fix ftnflo
	location.
	* src/gate/rfc2ftn.c (snd_message): Fix works
	option `ReplyAddrIfmailTX'.

2007-01-29  Andrey Slusar  <anrays@gmail.com>

	* src/toss/ftntoss.c (do_echomail): Fix tossing,
	when packet in passwd defined.

2006-12-30  Andrey Slusar  <anrays@gmail.com>

	======= Release 5.1.6ds ========================
	------- CVS tag R516 ---------------------------
	* configure.in: Update to 5.1.6ds
	* version.h (PATCHLEVEL): Ditto.
	* src/common/binkley.c:
	* src/common/lock.c:
	* src/include/prototypes.h:
	* src/toss/ftnroute.c:
	Rewrite locking style(patch from Yauheni Kaliuta).
	* doc/FAQ.ru:
	* Changes.ru:
	Update.
	* doc/README.ru:
	* doc/examples/dyff/fidogate.conf.sample.in:
	* doc/examples/point/fidogate.conf.in:
	* doc/examples/snp/fidogate.conf:
	Removed AutoCreateDontCheckPassword.
	* src/common/areasbbs.c (areasbbs_free): xfree() without
	checking.
	* src/toss/ftntoss.c (do_echomail): Change password
	checking in echomail packets - when password is incorrect,
	packet moved to bads, initialise `save'.
	* src/toss/ngoper.c: Add cvs Id.

2006-11-15  Andrey Slusar  <anrays@gmail.com>

	* src/areafix/areafix.c (cmd_sub): Fix potential
	crashes.
	* src/tick/ftntick.c (process_tick): Fix crashes
	(bug, reported by Eugene V. Subbotin)

2006-10-31  Andrey Slusar  <anrays@gmail.com>

	* src/common/msgid.c:
	* src/include/packet.h:
	* src/toss/ftntoss.c:
	name_from, name_to, subject is char types.

2006-10-20  Andrey Slusar  <anrays@gmail.com>
